--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="content">
         <h1>Donnesca Van Syfer</h1>
-        <p>Follow me on:</p>
+        <p>Follow me on making up things:</p>
         <p>
           <span
             ><a href="https://github.com/Donnesca"
